# signal-composer-plugins-demo-n2k

./: .gitignore  CMakeLists.txt  MAINTAINERS  README.md
conf.d/cmake/: config.cmake
conf.d/etc/: config.json
conf.d/packaging/: 0001-Fix-pkgconfig-issues.patch  signal-composer-plugins-demo-n2k.spec
docs/: 1-Architecture.md  2-Installation.md  3-Configuration.md  4-Usage.md  api-services-book.yml  demo-n2k-book.yml
docs/demo-n2k/: demo-n2k.md
docs/mov/: build_UI.webm  ui_dev_tool.webm
plugin/: CMakeLists.txt  source.cpp
